<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center_horizontal"
                android:text="@string/travel_hub"
                android:textColor="@color/primaryTextColor"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center_horizontal"
                android:text="@string/your_ultimate_companion_for_seamless_travel_experiences"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/travel" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email_address_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="12dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/accentColor"
                    app:boxStrokeWidth="0.5dp"
                    app:boxStrokeWidthFocused="0.5dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_email_address_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoe_ui"
                        android:hint="@string/enter_email_address"
                        android:maxLines="1"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="12dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/accentColor"
                    app:boxStrokeWidth="0.5dp"
                    app:boxStrokeWidthFocused="0.5dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/secondaryTextColor"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoe_ui"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/register_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="8dp"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="?attr/colorAccent"
                    android:fontFamily="@font/samsungsans_medium"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    app:elevation="0dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/register_sign_in_option_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:text="@string/sign_in"
                        android:textColor="@color/accentColor"
                        android:textSize="15sp" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_google_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/samsungsans_medium"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/sign_up_with_google"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    app:elevation="12dp"
                    app:icon="@drawable/googleg_standard_color_18"
                    app:iconGravity="textStart"
                    app:iconPadding="11dp"
                    app:iconTint="@null" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>