<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="16dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:scrollbarThumbVertical="@null"
            android:scrollbarTrackVertical="@null">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="22dp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="26sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signin_email_address_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="20dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/secondaryTextColor"
                    app:boxStrokeWidth="0.05dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signin_email_address_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoe_ui"
                        android:hint="@string/enter_email_address"
                        android:maxLines="1"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signin_password_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="20dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/secondaryTextColor"
                    app:boxStrokeWidth="0.05dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/secondaryTextColor"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signin_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoe_ui"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/signin_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="8dp"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signin_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="?attr/colorAccent"
                    android:fontFamily="@font/samsungsans_medium"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    app:elevation="0dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/register_option_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:text="@string/sign_up"
                        android:textColor="?attr/colorAccent"
                        android:textSize="15sp" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in_google_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/samsungsans_medium"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/sign_in_with_google"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    app:elevation="0dp"
                    app:icon="@drawable/googleg_standard_color_18"
                    app:iconGravity="textStart"
                    app:iconPadding="11dp"
                    app:iconTint="@null" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>